Put iconv.m4 macro inside the repo

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,8 @@ AC_PREREQ(2.53)
 AC_PACKAGE_VERSION(0.1.0)
 AC_INIT(iconv, 0.1.0, [], [])
 
+AC_CONFIG_MACRO_DIR([m4])
+
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_MAKE_SET
